# bbj-ai-strategy

./: .gitignore  .pre-commit-config.yaml  README.md  bbj-llm-strategy.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
.github/workflows/: deploy.yml  test-deploy.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.4-MILESTONE-AUDIT.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-MILESTONE-AUDIT.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v1.2-MILESTONE-AUDIT.md  v1.2-REQUIREMENTS.md  v1.2-ROADMAP.md  v1.3-MILESTONE-AUDIT.md  v1.3-REQUIREMENTS.md  v1.3-ROADMAP.md  v1.4-ROADMAP.md  v1.5-REQUIREMENTS.md  v1.5-ROADMAP.md  v1.6-MILESTONE-AUDIT.md  v1.6-REQUIREMENTS.md  v1.6-ROADMAP.md  v1.7-REQUIREMENTS.md  (+1 more)
docs/: index.md
rag-ingestion/: .env.example  .gitignore  Dockerfile  Makefile  README.md  VALIDATION.md  config.toml  docker-compose.yml  pyproject.toml  sources.toml
rag-ingestion/scripts/: backfill_urls.py  reset-db.sh  validate_e2e.py
rag-ingestion/sql/: schema.sql
rag-ingestion/src/bbj_rag/: __init__.py  app.py  chunker.py  cli.py  compiler.py  config.py  db.py  embedder.py  health.py  ingest_all.py  mcp_server.py  models.py  parallel.py  pipeline.py  schema.py  search.py  source_config.py  startup.py  url_mapping.py
rag-ingestion/src/bbj_rag/api/: chat.py  deps.py  routes.py  schemas.py
rag-ingestion/src/bbj_rag/chat/: __init__.py  prompt.py  stream.py  validation.py
rag-ingestion/src/bbj_rag/intelligence/: __init__.py  context_headers.py  doc_types.py  generations.py  report.py
rag-ingestion/src/bbj_rag/parsers/: __init__.py  bbj_source.py  flare.py  flare_cond.py  flare_toc.py  javadoc.py  mdx.py  pdf.py  web_crawl.py  wordpress.py
rag-ingestion/src/bbj_rag/static/: chat.css  chat.js
rag-ingestion/src/bbj_rag/templates/: chat.html
rag-ingestion/tests/: test_bbj_source_parser.py  test_chunker.py  test_config.py  test_context_headers.py  test_db.py  test_doc_types.py  test_embedder.py  test_flare_cond.py  test_flare_parser.py  test_flare_toc.py  test_generations.py  test_mdx_parser.py  test_models.py  test_parallel.py  test_pdf_parser.py  test_pipeline.py  test_placeholder.py  test_report.py  test_search_validation.py  test_url_mapping.py  test_web_crawl.py  test_wordpress_parser.py  validation_cases.yaml
static/: robots.txt
training-data/: CONTRIBUTING.md  FORMAT.md  README.md
(+295 files in other folders)
