[project]
name = "bbj-rag"
version = "0.1.0"
description = "RAG ingestion pipeline for BBj documentation"
requires-python = ">=3.12"
dependencies = [
    "psycopg[binary]>=3.3,<4",
    "pgvector>=0.4,<0.5",
    "pydantic>=2.12,<3",
    "pydantic-settings>=2.12,<3",
    "lxml>=5.3,<6",
    "httpx>=0.28,<1",
    "beautifulsoup4>=4.13,<5",
    "ollama>=0.6,<1",
    "click>=8.1,<9",
    "pyyaml>=6.0,<7",
    "pymupdf4llm>=0.2.9",
    "python-frontmatter>=1.1,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.0",
    "mypy>=1.19.0",
    "pre-commit>=4.3.0",
    "lxml-stubs>=0.5",
    "openai>=1.0,<2",
]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "RUF"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "-q", "-m", "not search_validation"]
markers = ["search_validation: requires database with embedded chunks"]

[project.scripts]
bbj-rag = "bbj_rag.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/bbj_rag"]
